--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: edu1
-        image: icishub.azurecr.io/shclub/edu1
+        image: devspacemyregistry.azurecr.io
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
