--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
 - deployment.yaml
 - service.yaml
 images:
-- name: kthamseungwoo/edu1:devspace1
+- name: devspacemyregistry.azurecr.io/kthamseungwoo/edu1:devspace1
   newTag: "devspace1"
