--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: edu1
-        image: kthamseungwoo/edu1:devspace1
+        image: devspacemyregistry.azurecr.io/kthamseungwoo/edu1:devspace1
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
