--- a/service.yaml
+++ b/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: edu1
+  name: devspace-dev
   labels: # service monitor 의 selector 를 위하여 생성
-    app: edu1
+    app: devspace-dev
 spec:
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 80
     name: http
   selector:
-    app: edu1
+    app: devspace-dev
   type: ClusterIP
