--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
 - deployment.yaml
 - service.yaml
 images:
-- name: devspacemyregistry.azurecr.io/kthamseungwoo/edu1:devspace1
-  newTag: "devspace1"
+- name: nexus.dspace.kt.co.kr/library/nginx:1.27.0
+  newTag: "from-devspace-nexus"
