--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,4 +21,4 @@ spec:
         ports:
         - containerPort: 80
       imagePullSecrets:
-      - name: devspace-nexus
+      - name: nexus-registry
