--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,11 +14,11 @@ spec:
         app: devspace-dev
     spec:
       containers:
-      - name: nginx
-        #image: devspacemyregistry.azurecr.io/kthamseungwoo/edu1:devspace1
-        image: nexus.dspace.kt.co.kr/library/nginx:1.27.0
+      - name: java-app
+        #image: nexus.dspace.kt.co.kr/library/nginx:1.27.0
+        image: acrdevspace.azurecr.io/devspace/java-maven:0.0.1
         imagePullPolicy: Always
         ports:
         - containerPort: 80
       imagePullSecrets:
-      - name: nexus-registry
+      - name: devspace-acr
